--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
     <div class="hero container">
       <div>
         <h1>Hello! <span></span></h1>
-        <h1>I'm Leulseged</h1>
-        <h1>Mesfin <span></span></h1>
-        <a href="#projects" type="button" class="cta">Portfolio</a>
+        <h1>I'm<span></span></h1>
+        <h1> Leulseged Mesfin</h1>
+        <a href="#resume" type="button" class="cta">Resume</a>
+        <a href="#contact" type="button" class="cta">Contact Me</a>
       </div>
     </div>
   </section>
@@ -100,6 +101,7 @@
         <h1 class="section-title"><span>My </span>Resume</h1>
       </div>
       <div class="resume-bottom">
+        <a href="https://drive.google.com/file/d/1te5n_9xpj3Lg2Tk1hHev9Ff1O2SoFR_G/view?usp=drive_link" style="color: black; font-size: large; background-color: darkgray; padding: 10px; border-radius: 5px;">Download Resume</a>
         <div class="resume-item">
           <h2>Backend Developer</h2>
           <div class="position">
@@ -274,7 +276,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./img/img-2.png" alt="img">
+          <img src="./img/Upwork2.jpg" alt="img">
         </div>
       </div>
       <div class="col-right">
@@ -289,7 +291,7 @@
           
             My Vision, I aim to build applications that not only function well but also make life easier for the people who use them. Whether it’s an inventory management system, an API, or a scalable web service, I’m always looking to create solutions that matter.</p>
 
-        <a href="#" class="cta">Download Resume</a>
+        <a href="https://drive.google.com/file/d/1te5n_9xpj3Lg2Tk1hHev9Ff1O2SoFR_G/view?usp=drive_link" class="cta">Download Resume</a>
       </div>
     </div>
   </section>
